Added heroku dependencies.

--- a/apidoc/index.html
+++ b/apidoc/index.html
@@ -12,6 +12,8 @@
   <link href="assets/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
   <link href="assets/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
   <link href="assets/favicon-16x16.png"rel="icon" type="image/png" sizes="16x16">
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true"></script>
+
 </head>
 
 <body class="container-fluid">
