--- a/apidoc/index.html
+++ b/apidoc/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>ShroomLogger</title>
   <meta name="description" content="REST Api">
@@ -11,15 +12,15 @@
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <link href="assets/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
   <link href="assets/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-  <link href="assets/favicon-16x16.png"rel="icon" type="image/png" sizes="16x16">
+  <link href="assets/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true"></script>
 
 </head>
 
 <body class="container-fluid">
 
-<!-- SIDENAV -->
-<script id="template-sidenav" type="text/x-handlebars-template">
+  <!-- SIDENAV -->
+  <script id="template-sidenav" type="text/x-handlebars-template">
 <nav id="scrollingNav">
   <div class="sidenav-search">
     <input class="form-control search" data-action='filter-search' type="text" placeholder="{{__ "Filter..."}}">
@@ -45,8 +46,8 @@
 </nav>
 </script>
 
-<!-- PROJECT -->
-<script id="template-project" type="text/x-handlebars-template">
+  <!-- PROJECT -->
+  <script id="template-project" type="text/x-handlebars-template">
   <div class="pull-left">
     <h1>{{name}}</h1>
     {{#if description}}<h2>{{{nl2br description}}}</h2>{{/if}}
@@ -75,19 +76,19 @@
   <div class="clearfix"></div>
 </script>
 
-<script id="template-header" type="text/x-handlebars-template">
+  <script id="template-header" type="text/x-handlebars-template">
   {{#if content}}
     <div id="api-_header" class="show-api-article show-api-_-article">{{{content}}}</div>
   {{/if}}
 </script>
 
-<script id="template-footer" type="text/x-handlebars-template">
+  <script id="template-footer" type="text/x-handlebars-template">
   {{#if content}}
     <div id="api-_footer" class="show-api-article show-api-_-article">{{{content}}}</div>
   {{/if}}
 </script>
 
-<script id="template-generator" type="text/x-handlebars-template">
+  <script id="template-generator" type="text/x-handlebars-template">
   {{#if template.withGenerator}}
     {{#if generator}}
       <div>
@@ -99,7 +100,7 @@
   {{/if}}
 </script>
 
-<script id="template-sections" type="text/x-handlebars-template">
+  <script id="template-sections" type="text/x-handlebars-template">
   <section id="api-{{group}}" class="show-api-group show-api-{{group}}-group {{#if aloneDisplay}} hide{{/if}}">
     <h1 class="color-primary font-weight-bold">{{underscoreToSpace title}}</h1>
     {{#if description}}
@@ -113,7 +114,7 @@
   </section>
 </script>
 
-<script id="template-article" type="text/x-handlebars-template">
+  <script id="template-article" type="text/x-handlebars-template">
   <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}">
     <div class="pull-left">
       <h1><span class="color-primary">{{underscoreToSpace article.groupTitle}}</span>{{#if article.title}} <span class="text-muted">|</span> {{article.title}}{{/if}}</h1>
@@ -193,7 +194,7 @@
   </article>
 </script>
 
-<script id="template-article-query-block" type="text/x-handlebars-template">
+  <script id="template-article-query-block" type="text/x-handlebars-template">
   {{#if article.query}}
     <h2>{{__ "Query Parameter(s)"}}</h2>
     <table>
@@ -236,7 +237,7 @@
   {{/if}}
 </script>
 
-<script id="template-article-body-block" type="text/x-handlebars-template">
+  <script id="template-article-body-block" type="text/x-handlebars-template">
   {{#if article.body}}
     <h2>{{__ "Request Body"}}</h2>
     <table>
@@ -285,7 +286,7 @@
   {{/if}}
 </script>
 
-<script id="template-article-param-block" type="text/x-handlebars-template">
+  <script id="template-article-param-block" type="text/x-handlebars-template">
   {{#if params}}
     {{#each params.fields}}
       <h2>{{__ @key}}</h2>
@@ -347,7 +348,7 @@
   {{/if}}
 </script>
 
-<script id="template-article-sample-request" type="text/x-handlebars-template">
+  <script id="template-article-sample-request" type="text/x-handlebars-template">
   {{#if article.sampleRequest}}
     <div class="well">
       <h3>{{__ "Send a Sample Request"}}</h3>
@@ -554,7 +555,7 @@
   {{/if}}
 </script>
 
-<script id="template-compare-article" type="text/x-handlebars-template">
+  <script id="template-compare-article" type="text/x-handlebars-template">
   <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}" data-compare-version="{{compare.version}}">
     <div class="pull-left">
       <h1>{{underscoreToSpace article.groupTitle}} | {{{showDiff article.title compare.title}}}</h1>
@@ -647,7 +648,7 @@
   </article>
 </script>
 
-<script id="template-article-compare-permission" type="text/x-handlebars-template">
+  <script id="template-article-compare-permission" type="text/x-handlebars-template">
   <p>
   {{__ "Permission:"}}
   {{#each_compare_list_field article.permission compare.permission field="name"}}
@@ -716,7 +717,7 @@
   </p>
 </script>
 
-<script id="template-article-compare-param-block" type="text/x-handlebars-template">
+  <script id="template-article-compare-param-block" type="text/x-handlebars-template">
   {{#if source}}
     {{#each_compare_keys source.fields compare.fields}}
       {{#if typeSame}}
@@ -811,7 +812,7 @@
   {{/if}}
 </script>
 
-<script id="template-article-compare-param-block-body" type="text/x-handlebars-template">
+  <script id="template-article-compare-param-block-body" type="text/x-handlebars-template">
   <tbody>
     {{#each_compare_field source compare}}
       {{#if typeSame}}
@@ -891,34 +892,44 @@
   </tbody>
 </script>
 
-<div class="container-fluid">
-  <div class="row">
-    <div id="sidenav" class="span2"></div>
-    <div id="content">
-      <div id="project"></div>
-      <div id="header"></div>
-      <div id="sections"></div>
-      <div id="footer"></div>
-      <div id="generator"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div id="sidenav" class="span2"></div>
+      <div id="content">
+        <div id="project"></div>
+        <div id="header"></div>
+        <div id="sections"></div>
+        <div id="footer"></div>
+        <div id="generator"></div>
+      </div>
     </div>
   </div>
-</div>
 
-<div id="loader">
-  <div class="spinner">
-    <div class="spinner-container container1">
-      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+  <div id="loader">
+    <div class="spinner">
+      <div class="spinner-container container1">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+      </div>
+      <div class="spinner-container container2">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+      </div>
+      <div class="spinner-container container3">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+      </div>
+      <p>Loading...</p>
     </div>
-    <div class="spinner-container container2">
-      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
-    </div>
-    <div class="spinner-container container3">
-      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
-    </div>
-    <p>Loading...</p>
   </div>
-</div>
 
-<script src="assets/main.bundle.js"></script>
+  <script src="assets/main.bundle.js"></script>
 </body>
+
 </html>
